--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     </div>
                     
                     <div>
-                        <h2 class="about__subtitle">I'am Husain</h2>
+                        <h2 class="about__subtitle">Flutter developer</h2>
                         <p class="about__text">I believe in making the impossible possible because there’s no fun in giving up</p>
                     </div>                                   
                 </div>
